--- a/content/resources/mit24_231f09_lec02.md
+++ b/content/resources/mit24_231f09_lec02.md
@@ -4,6 +4,7 @@ description: "Lecture notes on Plato\u2019s dialogue, what it is to be pious, an
   \ the Euthyphro problem."
 file: https://ol-ocw-studio-app-qa.s3.amazonaws.com/courses/24-231-ethics-fall-2009/095d54aa351c9a2e1a79d2e8a1ce0201_MIT24_231F09_lec02.pdf
 file_type: application/pdf
+parent_uid: 7c93cd30-4d43-0e79-b3a1-7385c34033a6
 resourcetype: Document
 title: 'Handout 1: Plato, "The Euthyphro" '
 uid: 095d54aa-351c-9a2e-1a79-d2e8a1ce0201
