--- a/content/resources/mit24_231f09_lec03.md
+++ b/content/resources/mit24_231f09_lec03.md
@@ -4,6 +4,7 @@ description: "Lecture notes on G. E. Moore\u2019s non-naturalism and open questi
   \ argument."
 file: https://ol-ocw-studio-app-qa.s3.amazonaws.com/courses/24-231-ethics-fall-2009/4d3b71ffcc7a256a2dcee44f97277875_MIT24_231F09_lec03.pdf
 file_type: application/pdf
+parent_uid: 7c93cd30-4d43-0e79-b3a1-7385c34033a6
 resourcetype: Document
 title: 'Handout 2: Moore on Goodness'
 uid: 4d3b71ff-cc7a-256a-2dce-e44f97277875
