--- a/content/resources/mit24_231f09_lec04.md
+++ b/content/resources/mit24_231f09_lec04.md
@@ -3,6 +3,7 @@ content_type: resource
 description: "Lecture notes on Alfred Jules Ayer\u2019s argument for emotivism."
 file: https://ol-ocw-studio-app-qa.s3.amazonaws.com/courses/24-231-ethics-fall-2009/f5b666a0f7be491b8e44180c6d7629fc_MIT24_231F09_lec04.pdf
 file_type: application/pdf
+parent_uid: 7c93cd30-4d43-0e79-b3a1-7385c34033a6
 resourcetype: Document
 title: "Handout 3: Ayer\u2019s Emotivism "
 uid: f5b666a0-f7be-491b-8e44-180c6d7629fc
