--- a/content/resources/mit24_231f09_lec05.md
+++ b/content/resources/mit24_231f09_lec05.md
@@ -3,6 +3,7 @@ content_type: resource
 description: Lecture notes on the form and content of moral judgments.
 file: https://ol-ocw-studio-app-qa.s3.amazonaws.com/courses/24-231-ethics-fall-2009/dc827d04419c5663f22b44241646b856_MIT24_231F09_lec05.pdf
 file_type: application/pdf
+parent_uid: 7c93cd30-4d43-0e79-b3a1-7385c34033a6
 resourcetype: Document
 title: 'Handout 4: Brink, "The Form and Content of Moral Judgments"'
 uid: dc827d04-419c-5663-f22b-44241646b856
