--- a/content/resources/mit24_231f09_lec07.md
+++ b/content/resources/mit24_231f09_lec07.md
@@ -4,6 +4,7 @@ description: Lecture notes on Harman's moral relativism and Sturgeon's counterfa
   test.
 file: https://ol-ocw-studio-app-qa.s3.amazonaws.com/courses/24-231-ethics-fall-2009/756a8a579c714451ffa8951c274960d9_MIT24_231F09_lec07.pdf
 file_type: application/pdf
+parent_uid: 7c93cd30-4d43-0e79-b3a1-7385c34033a6
 resourcetype: Document
 title: 'Handout 6: Sturgeon, "Moral Explanations"'
 uid: 756a8a57-9c71-4451-ffa8-951c274960d9
