--- a/content/resources/mit24_231f09_lec08.md
+++ b/content/resources/mit24_231f09_lec08.md
@@ -5,6 +5,7 @@ description: "Lecture notes on normative moral relativism, moral judgment relati
   s argument for moral relativism."
 file: https://ol-ocw-studio-app-qa.s3.amazonaws.com/courses/24-231-ethics-fall-2009/ca629b0de161e2418257852e85fa4fc1_MIT24_231F09_lec08.pdf
 file_type: application/pdf
+parent_uid: 7c93cd30-4d43-0e79-b3a1-7385c34033a6
 resourcetype: Document
 title: 'Handout 7: Harman, "What Is Moral Relativism?"'
 uid: ca629b0d-e161-e241-8257-852e85fa4fc1
