--- a/content/resources/mit24_231f09_lec09.md
+++ b/content/resources/mit24_231f09_lec09.md
@@ -3,6 +3,7 @@ content_type: resource
 description: Lecture notes on moral relativism.
 file: https://ol-ocw-studio-app-qa.s3.amazonaws.com/courses/24-231-ethics-fall-2009/9fa238fe56bb8440310dfe3efdb3bb79_MIT24_231F09_lec09.pdf
 file_type: application/pdf
+parent_uid: 7c93cd30-4d43-0e79-b3a1-7385c34033a6
 resourcetype: Document
 title: 'Handout 8: Foot, "What Is Moral Relativism?"'
 uid: 9fa238fe-56bb-8440-310d-fe3efdb3bb79
