--- a/content/resources/mit24_231f09_lec10.md
+++ b/content/resources/mit24_231f09_lec10.md
@@ -4,6 +4,7 @@ description: Lecture notes on "Ethical Relativism and the Problem of Incoherence
   by David Lyons.
 file: https://ol-ocw-studio-app-qa.s3.amazonaws.com/courses/24-231-ethics-fall-2009/8a7fec6073ef8a2061f11cefc63d5af1_MIT24_231F09_lec10.pdf
 file_type: application/pdf
+parent_uid: 7c93cd30-4d43-0e79-b3a1-7385c34033a6
 resourcetype: Document
 title: 'Handout 9: My Notes on Lyons, "Ethical Relativism and the Problem of Incoherence"'
 uid: 8a7fec60-73ef-8a20-61f1-1cefc63d5af1
