--- a/content/resources/mit24_231f09_lec12.md
+++ b/content/resources/mit24_231f09_lec12.md
@@ -4,6 +4,7 @@ description: "Lecture notes on theories of well-being, hedonism and Nozick\u2019
   \ experience machine, and objective-list views."
 file: https://ol-ocw-studio-app-qa.s3.amazonaws.com/courses/24-231-ethics-fall-2009/83e8b05cdce52f79cd30cc98f53725c4_MIT24_231F09_lec12.pdf
 file_type: application/pdf
+parent_uid: 7c93cd30-4d43-0e79-b3a1-7385c34033a6
 resourcetype: Document
 title: 'Handout 11: My Notes on Theories of Well-Being'
 uid: 83e8b05c-dce5-2f79-cd30-cc98f53725c4
