--- a/content/resources/mit24_231f09_lec14.md
+++ b/content/resources/mit24_231f09_lec14.md
@@ -5,6 +5,7 @@ description: "Lecture notes on consequentialism, deontology, welfarism, hedonism
   \ Williams\u2019 critique."
 file: https://ol-ocw-studio-app-qa.s3.amazonaws.com/courses/24-231-ethics-fall-2009/c983c419e9135a0c3dad911ff2e2410b_MIT24_231F09_lec14.pdf
 file_type: application/pdf
+parent_uid: 7c93cd30-4d43-0e79-b3a1-7385c34033a6
 resourcetype: Document
 title: 'Handout 13: Williams, "A Critique of Utilitarianism"'
 uid: c983c419-e913-5a0c-3dad-911ff2e2410b
