--- a/content/resources/mit24_231f09_lec15.md
+++ b/content/resources/mit24_231f09_lec15.md
@@ -4,6 +4,7 @@ description: Lecture notes on Lenman's Consequentialism and Cuelessness, the epi
   argument, and possible responses.
 file: https://ol-ocw-studio-app-qa.s3.amazonaws.com/courses/24-231-ethics-fall-2009/53a0477659ae023edf3de9c60975f622_MIT24_231F09_lec15.pdf
 file_type: application/pdf
+parent_uid: 7c93cd30-4d43-0e79-b3a1-7385c34033a6
 resourcetype: Document
 title: 'Handout 14: Notes on Lenman, "Consequentialism and Cluelessness"'
 uid: 53a04776-59ae-023e-df3d-e9c60975f622
