--- a/content/resources/mit24_231f09_lec16.md
+++ b/content/resources/mit24_231f09_lec16.md
@@ -4,6 +4,7 @@ description: "Lecture notes on act-utilitarianism (AU), Hodgson\u2019s charge an
   \ argument, and Singer\u2019s replies."
 file: https://ol-ocw-studio-app-qa.s3.amazonaws.com/courses/24-231-ethics-fall-2009/5a1e538bccd9add8d5abad4c21fc4a1c_MIT24_231F09_lec16.pdf
 file_type: application/pdf
+parent_uid: 7c93cd30-4d43-0e79-b3a1-7385c34033a6
 resourcetype: Document
 title: 'Handout 15: Singer, "Is Act-Utilitarianism Self-Defeating?"'
 uid: 5a1e538b-ccd9-add8-d5ab-ad4c21fc4a1c
