--- a/content/resources/mit24_231f09_lec17.md
+++ b/content/resources/mit24_231f09_lec17.md
@@ -5,6 +5,7 @@ description: "Lecture notes on act-utilitarianism, rule-utilitarianism, utilitar
   \ summary rules.\r\n"
 file: https://ol-ocw-studio-app-qa.s3.amazonaws.com/courses/24-231-ethics-fall-2009/facead655db8bdcbb1ae9a6c02a40697_MIT24_231F09_lec17.pdf
 file_type: application/pdf
+parent_uid: 7c93cd30-4d43-0e79-b3a1-7385c34033a6
 resourcetype: Document
 title: 'Handout 16: Rawls, "Two Concepts of Rules"'
 uid: facead65-5db8-bdcb-b1ae-9a6c02a40697
