--- a/content/resources/mit24_231f09_lec18.md
+++ b/content/resources/mit24_231f09_lec18.md
@@ -4,6 +4,7 @@ description: Lecture notes on the central problem of ethics, agent-relative vers
   agent-neutral Reasons, reasons of autonomy, and deontological reasons.
 file: https://ol-ocw-studio-app-qa.s3.amazonaws.com/courses/24-231-ethics-fall-2009/2aa5e59ac0dd208cb8d8d58c872aa228_MIT24_231F09_lec18.pdf
 file_type: application/pdf
+parent_uid: 7c93cd30-4d43-0e79-b3a1-7385c34033a6
 resourcetype: Document
 title: 'Handout 17: Nagel, "Ethics" (or "Autonomy and Deontology") '
 uid: 2aa5e59a-c0dd-208c-b8d8-d58c872aa228
