--- a/content/resources/mit24_231f09_lec19.md
+++ b/content/resources/mit24_231f09_lec19.md
@@ -3,6 +3,7 @@ content_type: resource
 description: Lecture notes on Rawls' "Classical Utilitarianism" and Nagel's "Equality."
 file: https://ol-ocw-studio-app-qa.s3.amazonaws.com/courses/24-231-ethics-fall-2009/5f78de2862aa2e86361192ce93eb64c1_MIT24_231F09_lec19.pdf
 file_type: application/pdf
+parent_uid: 7c93cd30-4d43-0e79-b3a1-7385c34033a6
 resourcetype: Document
 title: 'Handout 18: Rawls, "Classical Utilitarianism" and Nagel, "Equality"'
 uid: 5f78de28-62aa-2e86-3611-92ce93eb64c1
