--- a/content/resources/mit24_231f09_lec20.md
+++ b/content/resources/mit24_231f09_lec20.md
@@ -3,6 +3,7 @@ content_type: resource
 description: Lecture notes on "The Idea of Equality" by Bernard Williams.
 file: https://ol-ocw-studio-app-qa.s3.amazonaws.com/courses/24-231-ethics-fall-2009/004a83c588f30a2b83cfb6e39aab966b_MIT24_231F09_lec20.pdf
 file_type: application/pdf
+parent_uid: 7c93cd30-4d43-0e79-b3a1-7385c34033a6
 resourcetype: Document
 title: 'Handout 19: Bernard Williams, "The Idea of Equality"'
 uid: 004a83c5-88f3-0a2b-83cf-b6e39aab966b
