--- a/content/resources/mit24_231f09_lec21.md
+++ b/content/resources/mit24_231f09_lec21.md
@@ -4,6 +4,7 @@ description: "Lecture notes on famine, affluence, morality, the strong Singer pr
   \ the weak Singer principle, and Singer\u2019s argument."
 file: https://ol-ocw-studio-app-qa.s3.amazonaws.com/courses/24-231-ethics-fall-2009/ae330b8c126f18b52d96ec1b1abf7cd9_MIT24_231F09_lec21.pdf
 file_type: application/pdf
+parent_uid: 7c93cd30-4d43-0e79-b3a1-7385c34033a6
 resourcetype: Document
 title: 'Handout 20: Singer, "Famine, Affluence, and Morality"'
 uid: ae330b8c-126f-18b5-2d96-ec1b1abf7cd9
