--- a/content/resources/mit24_231f09_lec22.md
+++ b/content/resources/mit24_231f09_lec22.md
@@ -3,6 +3,7 @@ content_type: resource
 description: "Lecture notes on Nomy Arpaly and moral worth.\r\n"
 file: https://ol-ocw-studio-app-qa.s3.amazonaws.com/courses/24-231-ethics-fall-2009/d8ff11b5d39bbb03cf9c8cc8cdbdfdcd_MIT24_231F09_lec22.pdf
 file_type: application/pdf
+parent_uid: 7c93cd30-4d43-0e79-b3a1-7385c34033a6
 resourcetype: Document
 title: 'Handout 21: Nomy Arpaly, "Moral Worth"'
 uid: d8ff11b5-d39b-bb03-cf9c-8cc8cdbdfdcd
