--- a/content/resources/mit24_231f09_lec23.md
+++ b/content/resources/mit24_231f09_lec23.md
@@ -3,6 +3,7 @@ content_type: resource
 description: Lecture notes on moral character, virtue, and Susan Wolf on moral saints.
 file: https://ol-ocw-studio-app-qa.s3.amazonaws.com/courses/24-231-ethics-fall-2009/942081e416c579609705e22717f5cdde_MIT24_231F09_lec23.pdf
 file_type: application/pdf
+parent_uid: 7c93cd30-4d43-0e79-b3a1-7385c34033a6
 resourcetype: Document
 title: 'Handout 22: Susan Wolf, "Moral Saints"'
 uid: 942081e4-16c5-7960-9705-e22717f5cdde
