--- a/content/resources/mit24_231f09_lec24.md
+++ b/content/resources/mit24_231f09_lec24.md
@@ -3,6 +3,7 @@ content_type: resource
 description: Lecture notes on the incompatibility of free will and determinism.
 file: https://ol-ocw-studio-app-qa.s3.amazonaws.com/courses/24-231-ethics-fall-2009/5f90e807e0fe8eaf88b375f432d1602c_MIT24_231F09_lec24.pdf
 file_type: application/pdf
+parent_uid: 7c93cd30-4d43-0e79-b3a1-7385c34033a6
 resourcetype: Document
 title: 'Handout 23: Peter van Inwagen, "The Incompatibility of Free Will and Determinism"'
 uid: 5f90e807-e0fe-8eaf-88b3-75f432d1602c
