--- a/content/resources/mit24_231f09_lec25.md
+++ b/content/resources/mit24_231f09_lec25.md
@@ -5,6 +5,7 @@ description: "Lecture notes on Harry Frankfurt, moral responsibility, the classi
   and ought implies can (OIC)."
 file: https://ol-ocw-studio-app-qa.s3.amazonaws.com/courses/24-231-ethics-fall-2009/138cf82e65ac80aae829664d2b740b44_MIT24_231F09_lec25.pdf
 file_type: application/pdf
+parent_uid: 7c93cd30-4d43-0e79-b3a1-7385c34033a6
 resourcetype: Document
 title: 'Handout 24: Harry Frankfurt, "Alternate Possibilities and Moral  Responsibility"'
 uid: 138cf82e-65ac-80aa-e829-664d2b740b44
