--- a/content/resources/mit24_231f09_lec26.md
+++ b/content/resources/mit24_231f09_lec26.md
@@ -4,6 +4,7 @@ description: "Lecture notes on the control principle, moral luck, an analogy to 
   \ and Nagel\u2019s diagnosis."
 file: https://ol-ocw-studio-app-qa.s3.amazonaws.com/courses/24-231-ethics-fall-2009/f57c264af20e19431edb5b69fdf5fef0_MIT24_231F09_lec26.pdf
 file_type: application/pdf
+parent_uid: 7c93cd30-4d43-0e79-b3a1-7385c34033a6
 resourcetype: Document
 title: 'Handout 25: Nagel, "Moral Luck"'
 uid: f57c264a-f20e-1943-1edb-5b69fdf5fef0
